cabal-version:      2.4
name:               code
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Apoorv Ingle
maintainer:         apoorv-ingle@uiowa.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable code
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules: GADT

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: GADTs
                      TypeFamilies

    build-depends:    base ^>=4.16.4.0
                    , comp-examples
                    
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:   -optl=-Wl,-no_fixup_chains
    
library comp-examples
    build-depends:    base ^>=4.16.4.0
            
    hs-source-dirs: examples

    default-language: Haskell2010

    exposed-modules: GADT
    
    -- other-modules: GADT

    other-extensions: GADTs
                      TypeFamilies

    ghc-options:   -optl=-Wl,-no_fixup_chains